# HighPerformanceECGQml

./: .gitignore  CMakeLists.txt  gitup.sh  main.cpp  main.h  qml.qrc
fftw/: libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp  libfftw3f-3.lib  libfftw3l-3.exp  libfftw3l-3.lib
modules/: AudioInput.cpp  AudioInput.h  AudioVisualizerModel.cpp  AudioVisualizerModel.h  DataGenerator.cpp  DataGenerator.h  EggModel.cpp  EggModel.h  EggSensor.cpp  EggSensor.h  RingBuffer.h  TimeTrace.h
qml/: EggMonitor.qml  LazyPage.qml  Main.qml  MainWindow.qml  ToolSelector.qml  VoiceVisualizer.qml
